--- a/graphics/styles/break/break.css
+++ b/graphics/styles/break/break.css
@@ -43,3 +43,11 @@ span.pronoun {
 	font-weight: 400;
 	margin-top: 5px;
 }
+
+.scene {
+	width: 100vw;
+	height: 100vh;
+
+	position: absolute;
+	top: 0; left: 0;
+}
