Various tweaks and fixes: - Tweak main scene intervals: main info shows for 45s, social media shows for 15s - Fix fitted-text on scenes scoreboard showing incorrectly - Fix casters sometimes not updating

--- a/graphics/styles/main/main.css
+++ b/graphics/styles/main/main.css
@@ -132,6 +132,7 @@ div.casters-wrapper > .background > .casters-content > .casters {
 
 div.casters-wrapper > .background > .casters-content > .casters fitted-text {
 	font-size: 32px;
+	font-weight: 600;
 	position: absolute;
 }
 
