--- a/graphics/styles/bracket/bracket.css
+++ b/graphics/styles/bracket/bracket.css
@@ -1,35 +1,51 @@
+.bracket-title {
+    position: absolute;
+    height: 65px;
+    width: 100%;
+    background-color: var(--background-1);
+    border-bottom: 4px solid var(--accent);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#bracket-title-text {
+    color: white;
+    font-size: 36px;
+    font-weight: 600;
+}
+
 #bracket-container {
     line-height: 1.5em;
     position: absolute;
-    top: 50px;
+    top: 130px;
     left: 100px;
     font-weight: 500;
 }
 
 #bracket-container > div {
     width: 1720px;
-    height: 980px;
+    height: 900px;
     overflow: visible;
 }
 
 .swiss-renderer {
-    width: 60%;
     justify-items: center;
 }
-.swiss-renderer .match-row-wrapper {
-    width: 1000px;
+.swiss-renderer .match-cell-wrapper {
+    width: 250px;
     margin: 6px;
     display: flex;
     justify-content: center;
     position: relative;
 }
-.swiss-renderer .match-row {
+.swiss-renderer .match-cell {
     background-color: var(--background-1);
     z-index: 2;
     height: 100%;
-    min-width: 1000px;
+    min-width: 250px;
 }
-.swiss-renderer .match-row-accent {
+.swiss-renderer .match-cell-accent {
     height: 100%;
     width: 100%;
     background-color: var(--accent);
@@ -38,7 +54,7 @@
     z-index: 1;
     border-radius: 10px;
 }
-.match-row-overflow-wrapper {
+.match-cell-overflow-wrapper {
     width: 100%;
     height: 100%;
     position: relative;
@@ -48,13 +64,15 @@
     justify-content: center;
     border-radius: 10px;
 }
-.swiss-renderer .match-row-wrapper .match-row__scores {
+.swiss-renderer .match-cell-wrapper .match-cell__score-wrapper {
     font-weight: 700;
     background-color: var(--background-2);
+    height: 100%;
+    padding-top: 9px;
 }
-.swiss-renderer .match-row-wrapper.top-team-winner .match-row__top-team-name {
+.swiss-renderer .match-cell-wrapper.top-team-winner .match-cell__top-team-name {
     font-weight: 700;
 }
-.swiss-renderer .match-row-wrapper.bottom-team-winner .match-row__bottom-team-name {
+.swiss-renderer .match-cell-wrapper.bottom-team-winner .match-cell__bottom-team-name {
     font-weight: 700;
 }
