--- a/graphics/styles/bracket/bracket.css
+++ b/graphics/styles/bracket/bracket.css
@@ -45,7 +45,7 @@
     height: 100%;
     min-width: 250px;
 }
-.swiss-renderer .match-cell-wrapper.in-progress .match-cell-accent {
+.swiss-renderer .match-cell-wrapper:not(.top-team-winner, .bottom-team-winner) .match-cell-accent {
     filter: drop-shadow(0 0 5px var(--accent));
 }
 .swiss-renderer .match-cell-accent {
