--- a/graphics/styles/break/stages.css
+++ b/graphics/styles/break/stages.css
@@ -68,6 +68,7 @@
 	position: relative;
 	font-weight: 600;
 	margin: 10px;
+	overflow-wrap: anywhere;
 }
 
 .scene.stages-scene > .stages-grid > .stage > .stage-content > .stage-text > .stage-winner-wrapper {
